[Backend] Spring-Boot project setup #1 - BaseDomain, User entity létrehozás lombok és liquibase segítségével

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,9 @@ spring:
   liquibase:
     enabled: true
     change-log: 'classpath:db/changelog/changelog-master.xml'
+    default-schema: public
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: 'jdbc:postgresql://localhost:5432/socially'
+    username: socially
+    password: socially
