--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,3 +8,6 @@ spring:
     url: 'jdbc:postgresql://localhost:5432/socially'
     username: socially
     password: socially
+springdoc:
+  api-docs:
+    path: '/api-docs'
