[Backend] REST endpoints implement #7 - PostController endpointok elkészültek - Adatbázis sémában egy apróbb javítás be lett téve, hogy működjön az adatbázis <-> JPA id generálás - Exception kezelés alapjai elkészültek.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,8 @@ spring:
     url: 'jdbc:postgresql://localhost:5432/socially'
     username: socially
     password: socially
+  jpa:
+    open-in-view: false
 springdoc:
   api-docs:
     path: '/api-docs'
