--- a/src/main/resources/application-development.yaml
+++ b/src/main/resources/application-development.yaml
@@ -3,7 +3,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
 application:
   environment:
     testing-endpoints-enabled: true
