--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>hu.dominikvaradi</groupId>
     <artifactId>socially-backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.2.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
